--- a/log.html
+++ b/log.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<title>workpans</title>
 	</head>
 	<style type="text/css">
 		header{
